--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ buildscript {
         }
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-		jcenter()
+        jcenter()
     }
 
     dependencies {
-    	classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'org.robovm:robovm-gradle-plugin:1.9.0'
     }
 }
@@ -22,7 +22,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'ashley-superjumper'
-        gdxVersion = '1.7.1'
+        gdxVersion = '1.9.6'
         ashleyVersion = '1.7.0'
         roboVMVersion = '1.9.0'
     }
@@ -46,21 +46,26 @@ project(":desktop") {
     }
 }
 
-project(":android") {
-    apply plugin: "android"
+import com.github.dwursteisen.libgdx.IsAndroidSdk
 
-    configurations { natives }
+if (IsAndroidSdk.isDetected()) {
 
-    dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
-        compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
+    project(":android") {
+        apply plugin: "android"
+
+        configurations { natives }
+
+        dependencies {
+            compile project(":core")
+            compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+            natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
+            natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
+            natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
+            compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
+        }
     }
 }
-
+/*
 project(":ios") {
     apply plugin: "java"
     apply plugin: "robovm"
@@ -89,7 +94,7 @@ project(":html") {
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion:sources"
     }
 }
-
+*/
 project(":core") {
     apply plugin: "java"
 
@@ -97,6 +102,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
+        compile("com.github.dwursteisen.libgdx:ashley-addons:1.0.0-SNAPSHOT")
     }
 }
 
