--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 
     ext {
-        kotlinVersion = '1.1.3-2'
+        kotlinVersion = '1.1.4'
     }
 
     dependencies {
@@ -111,7 +111,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
         compile("com.github.dwursteisen.libgdx:ashley-addons:1.0.0-SNAPSHOT")
-        compile("com.github.dwursteisen.libgdx:libgdx:1.0.0-SNAPSHOT")
+        compile("com.github.dwursteisen.libgdx:core-addons:1.0.0-SNAPSHOT")
     }
 }
 
